--- a/src/main/resources/templates/productlist.html
+++ b/src/main/resources/templates/productlist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <title>Productlist</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -12,10 +12,12 @@
     </tr>
     <tr th:each = "product : ${products}">
         <td th:text="${product.productId} + ' ' +${product.productName} + ' ' + ${product.productDescription}+ ' ' + ${product.productPrice}"></td>
-        <td><a th:href="@{/delete/{id}(id=${product.productId})}">Delete</a></td>
+        <td sec:authorize="hasAuthority('ADMIN')" ><a th:href="@{/delete/{id}(id=${product.productId})}">Delete</a></td>
         <td><a th:href="@{/edit/{id}(id=${product.productId})}">Edit</a></td>
     </tr>
 </table>
-<a href="/add">Add Product</a>
+<a sec:authorize="hasAuthority('ADMIN')"  href="/add">Add Product</a>
+<a href="/">HomePage</a>
+<a href="/logout">Logout</a>
 </body>
 </html>
